--- a/sass/about.html
+++ b/sass/about.html
@@ -19,9 +19,10 @@
       <ul class="menu__list">
         <li class="menu__links"><a href="index.html" class="menu__link">Página Inicial</a></li>
         <li class="menu__links"><a href="about.html" class="menu__link">Sobre nós</a></li>
-        <li class="menu__links"><a href="index.html" class="menu__link">Cães</a></li>
-        <li class="menu__links"><a href="index.html" class="menu__link">Gatos</a></li>
-        <li class="menu__links"><a href="index.html" class="menu__link">Pássaros</a></li>
+        <li class="menu__links"><a href="collection.html" class="menu__link">Cães</a></li>
+        <li class="menu__links"><a href="collection.html" class="menu__link">Gatos</a></li>
+        <li class="menu__links"><a href="collection.html" class="menu__link">Pássaros</a></li>
+        <li class="menu__links"><a href="contact.html" class="menu__link">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -42,7 +43,7 @@
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
       </p>
       <div  class="about__split">
-        <img src="assets/img/about.png" alt="Gatito", class="about__img2">
+        <img src="assets/img/about.png" alt="Gatito", class="about__img-description">
         <div class="about__txt">
           <p class="about__p">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
