--- a/sass/index.html
+++ b/sass/index.html
@@ -19,9 +19,10 @@
       <ul class="menu__list">
         <li class="menu__links"><a href="index.html" class="menu__link">Página Inicial</a></li>
         <li class="menu__links"><a href="about.html" class="menu__link">Sobre nós</a></li>
-        <li class="menu__links"><a href="index.html" class="menu__link">Cães</a></li>
-        <li class="menu__links"><a href="index.html" class="menu__link">Gatos</a></li>
-        <li class="menu__links"><a href="index.html" class="menu__link">Pássaros</a></li>
+        <li class="menu__links"><a href="collection.html" class="menu__link">Cães</a></li>
+        <li class="menu__links"><a href="collection.html" class="menu__link">Gatos</a></li>
+        <li class="menu__links"><a href="collection.html" class="menu__link">Pássaros</a></li>
+        <li class="menu__links"><a href="contact.html" class="menu__link">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -29,7 +30,7 @@
   <main class="main">
     <div class="main__content">
       <article class="main__post">
-        <a href="#" class="main__title">Cuidado com os animais durante a quarentena</a>
+        <a href="article.html" class="main__title">Cuidado com os animais durante a quarentena</a>
         <div class="main__subtitle">
           <p class="main__date">20/08/2020</p>
           <span class="main__tag">Cães</span>
@@ -51,6 +52,41 @@
           </div>
         </div>
       </article>
+    </div>
+
+    <div class="main__sidebar sidebar">
+      <aside class="sidebar__top">
+        <p class="sidebar__title">Top posts</p>
+        <ul class="sidebar__posts">
+          <li class="sidebar__list">
+            <img src="assets/img/cat.jpg" alt="Gato" class="sidebar__img">
+            <div class="sidebar__details">
+              <a href="article.html" class="sidebar__post-title">
+                Adotar um gato: tudo que você precisa saber
+              </a>
+              <p class="sidebar__post-date">15/08/2020</p>
+            </div>
+          </li>
+          <li class="sidebar__list">
+            <img src="assets/img/cat.jpg" alt="Gato" class="sidebar__img">
+            <div class="sidebar__details">
+              <a href="article.html" class="sidebar__post-title">
+                Adotar um gato: tudo que você precisa saber
+              </a>
+              <p class="sidebar__post-date">15/08/2020</p>
+            </div>
+          </li>
+          <li class="sidebar__list">
+            <img src="assets/img/cat.jpg" alt="Gato" class="sidebar__img">
+            <div class="sidebar__details">
+              <a href="article.html" class="sidebar__post-title">
+                Adotar um gato: tudo que você precisa saber
+              </a>
+              <p class="sidebar__post-date">15/08/2020</p>
+            </div>
+          </li>
+        </ul>
+      </aside>  
     </div>
   </main>
 
